ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-site-ingress
spec:
  ingressClassName: nginx
  tls:
    - secretName: sponsor-cert
  rules:
    - host: k8s.sponsor.ajay.app
      http: &backend
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sb-site-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sb-server-service
                port:
                  number: 8080
          - path: /database
            pathType: Prefix
            backend:
              service:
                name: db-dumper-service
                port:
                  number: 8080
    # - host: "sponsor.ajay.app"
    #   http: *backend
    # - host: "api.sponsor.ajay.app"
    #   http: *backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-site-ingress-cached
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    # nginx.ingress.kubernetes.io/service-upstream: "true" # for 503 handling? maybe not needed
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 20m;
      proxy_cache_lock on;
      proxy_cache_use_stale updating;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  ingressClassName: nginx
  tls:
    - secretName: sponsor-cert
  rules:
    - host: k8s.sponsor.ajay.app
      http: &backend
        paths:
          - path: /api/getTopUsers
            pathType: Prefix
            backend: &sb-server
              service:
                name: sb-server-service
                port:
                  number: 8080
          - path: /api/getTotalStats
            pathType: Prefix
            backend: *sb-server
          - path: /api/getTopCategoryUsers
            pathType: Prefix
            backend: *sb-server
    # - host: "sponsor.ajay.app"
    #   http: *backend
    # - host: "api.sponsor.ajay.app"
    #   http: *backend
